--- a/src/components/scss/Header.scss
+++ b/src/components/scss/Header.scss
@@ -1,58 +1,59 @@
 @import "./scss-variables.scss";
-nav {
-	display: flex;
-	// justify-content: space-between;
-	background-color: $rouge-nav;
-	.cont-socials {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
 
-		background-color: #ffffff;
+// nav {
+// 	display: flex;
+// 	// justify-content: space-between;
+// 	background-color: $rouge-nav;
+// 	.cont-socials {
+// 		display: flex;
+// 		flex-direction: column;
+// 		justify-content: center;
 
-		a:first-child {
-			text-decoration: none;
-			color: #0a7836;
-			font-size: 22px;
-			font-weight: 550;
-			//font: normal normal normal 22px roboto-bold, roboto, sans-serif;
-			font-family: Arial, Helvetica, sans-serif;
-		}
-	}
-}
+// 		background-color: #ffffff;
 
-.cont-nav-droit {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	.logo {
-		display: flex;
-		margin-right: auto;
-		//margin-left: 0;
-		justify-content: center;
-		align-items: center;
-		svg {
-			width: 200px;
-		}
-	}
-	.list {
-		display: flex;
-		// justify-content: flex-end;
-		ul {
-			padding: 0;
-			margin-left: 40vw;
-			list-style: none;
-			display: flex;
-			justify-content: space-around;
-			align-items: center;
-			li {
-				text-transform: uppercase;
-				color: #fff;
-				margin-right: 20px;
-				&:last-child {
-					margin-right: 0;
-				}
-			}
-		}
-	}
-}
+// 		a:first-child {
+// 			text-decoration: none;
+// 			color: #0a7836;
+// 			font-size: 22px;
+// 			font-weight: 550;
+// 			//font: normal normal normal 22px roboto-bold, roboto, sans-serif;
+// 			font-family: Arial, Helvetica, sans-serif;
+// 		}
+// 	}
+// }
+
+// .cont-nav-droit {
+// 	display: flex;
+// 	flex-direction: row;
+// 	justify-content: space-between;
+// 	.logo {
+// 		display: flex;
+// 		margin-right: auto;
+// 		//margin-left: 0;
+// 		justify-content: center;
+// 		align-items: center;
+// 		svg {
+// 			width: 200px;
+// 		}
+// 	}
+// 	.list {
+// 		display: flex;
+// 		// justify-content: flex-end;
+// 		ul {
+// 			padding: 0;
+// 			margin-left: 40vw;
+// 			list-style: none;
+// 			display: flex;
+// 			justify-content: space-around;
+// 			align-items: center;
+// 			li {
+// 				text-transform: uppercase;
+// 				color: #fff;
+// 				margin-right: 20px;
+// 				&:last-child {
+// 					margin-right: 0;
+// 				}
+// 			}
+// 		}
+// 	}
+// }
