--- a/src/components/scss/Header.scss
+++ b/src/components/scss/Header.scss
@@ -1,5 +1,79 @@
 @import "./scss-variables.scss";
 
+nav {
+	background-color: $rouge-nav;
+	height: 10vh;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: fixed;
+	width: 100vw;
+}
+.cont-logo {
+	margin-left: 5vw;
+	svg {
+		margin: 0;
+		width: 75%;
+		height: 100%;
+	}
+}
+
+.cont-ham {
+	margin-right: 10vw;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	span {
+		width: 25px;
+		height: 3px;
+		background-color: white;
+	}
+
+	span:nth-child(1) {
+		margin-bottom: 7px;
+	}
+	span:nth-child(2) {
+		margin-bottom: 7px;
+	}
+	// span:nth-child(3) {
+	// }
+}
+
+.menu-ham {
+	position: fixed;
+	background-color: $rouge-nav;
+	padding: 10px;
+	display: flex;
+	right: 0;
+	top: 0;
+	ul {
+		display: flex;
+		flex-direction: column;
+		text-align: right;
+		// align-content: flex-end;
+		// justify-content: flex-end;
+		margin-left: auto;
+		margin-right: 0;
+		list-style: none;
+		height: 100vh;
+		width: 40vw;
+
+		li {
+			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+				Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+				sans-serif;
+			letter-spacing: 2px;
+			color: #fff;
+			padding: 10px 20px;
+
+			&:first-child {
+				margin-top: 10vh;
+			}
+		}
+	}
+}
+
 // nav {
 // 	display: flex;
 // 	// justify-content: space-between;
