--- a/src/components/scss/Hamburger.scss
+++ b/src/components/scss/Hamburger.scss
@@ -26,11 +26,18 @@
 			letter-spacing: 2px;
 			color: #fff;
 			padding: 10px 20px;
+			// border-bottom: 1px solid rgba($color: #fff, $alpha: 0.5);
 			a {
 				text-decoration: none;
 				color: #fff;
 				font-size: 18px;
 			}
+		}
+		.ligne {
+			background-color: rgba(255, 255, 255, 0.5);
+			width: 115px;
+			height: 1px;
+			padding: 0 10px;
 		}
 	}
 }
