hero fait a la moitier

--- a/src/components/scss/Header.scss
+++ b/src/components/scss/Header.scss
@@ -8,6 +8,8 @@ nav {
 	align-items: center;
 	position: fixed;
 	width: 100vw;
+	z-index: 5;
+	margin-bottom: 10vh;
 }
 .cont-logo {
 	margin-left: 5vw;
