on a ajouter notre carousel horizontal

--- a/src/components/scss/Hero.scss
+++ b/src/components/scss/Hero.scss
@@ -57,5 +57,18 @@
 				}
 			}
 		}
+
+		a {
+			color: #fff;
+			text-decoration: none;
+			background-color: #0a7836;
+			width: fit-content;
+			margin: 20px auto;
+			padding: 15px 25px;
+			border-radius: 25px;
+			font-family: roboto, roboto-bold, sans-serif;
+			font-weight: bold;
+			font-size: 13px;
+		}
 	}
 }
