--- a/src/components/scss/Carousel.scss
+++ b/src/components/scss/Carousel.scss
@@ -2,14 +2,16 @@
 
 .cont-slider {
 	margin: auto;
-	width: 280px;
+	width: 90vw;
+	height: 291px;
 	overflow: hidden;
 	.slides {
 		display: flex;
 		width: 100vw;
 		//overflow: hidden;
 		.cont-slide {
-			width: 200px;
+			width: 280px;
+			//height: 291px;
 			img {
 				width: inherit;
 			}
