--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,3 @@
 @import "./components/scss/scss-variables";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import "~bootstrap/scss/bootstrap";
