--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
 @import "./components/scss/scss-variables";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Sen:wght@400;700&display=swap");
 @import "~bootstrap/scss/bootstrap";
