--- a/src/components/scss/Expertise.scss
+++ b/src/components/scss/Expertise.scss
@@ -3,32 +3,94 @@
 .title-container {
 	position: relative;
 	display: flex;
+	width: fit-content;
+	flex-direction: column;
 	justify-content: center;
+	align-items: center;
+	align-self: center;
 	margin-top: 175px;
+	margin-left: 10vw;
+	margin-right: auto;
 	span {
-		position: absolute;
+		//position: absolute;
+		text-align: left;
 	}
 }
 
 .lilNos {
 	top: 0;
-	left: 12vw;
+	margin-left: 10vw;
+	margin-right: auto;
+	margin-bottom: 0;
 	text-transform: uppercase;
-	font: normal bold normal 16px/1.4em Sen, sans-serif;
+	// font: normal bold normal 16px/1.4em Sen, sans-serif;
+	font-weight: bold;
+	font-family: Sen, sans-serif;
+	text-align: left;
+	z-index: 2;
 }
 .bigE {
-	top: -120px;
+	position: absolute;
+	top: -75px;
 	z-index: 1;
 	left: 19vw;
 	color: #549a6f;
 	font: normal bold normal 166.5px/1.4em roboto-bold, roboto, sans-serif;
-	font-size: 300px;
+	//font-size: 300px;
 }
 .title {
-	top: 10px;
-	left: 11vw;
+	//top: 5px;
+	margin-top: 0;
 	z-index: 2;
+	margin-right: auto;
+	margin-left: 10vw;
 	color: #303030;
-	font: normal bold normal 60px/1.4em roboto-bold, roboto, sans-serif;
+	font: normal bold normal 37px/1.4em roboto-bold, roboto, sans-serif;
 	text-transform: uppercase;
+}
+.cont-text {
+	margin-top: 50px;
+	margin-left: auto;
+	margin-right: auto;
+	width: 90vw;
+	p {
+		text-align: left;
+		font-family: Sen, sans-serif;
+		font-size: 15px/1.4em;
+		span {
+			font-weight: bold;
+		}
+	}
+}
+
+.cont-icons {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	.row2 {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		// flex-wrap: nowrap;
+		margin-left: auto;
+		margin-right: auto;
+		width: 70vw;
+		.item {
+			width: 50vw;
+			margin: 20px auto;
+			display: flex;
+			flex-direction: column;
+			img {
+				width: 60px;
+				margin: 0 auto;
+			}
+			p {
+				text-align: center;
+				display: inline-block;
+				width: fit-content;
+				text-transform: uppercase;
+				margin: 10px auto;
+			}
+		}
+	}
 }
