--- a/src/components/scss/Expertise.scss
+++ b/src/components/scss/Expertise.scss
@@ -7,9 +7,10 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+
 	align-self: center;
 	margin-top: 175px;
-	margin-left: 10vw;
+	margin-left: auto;
 	margin-right: auto;
 	span {
 		//position: absolute;
@@ -19,7 +20,7 @@
 
 .lilNos {
 	top: 0;
-	margin-left: 10vw;
+	// margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 0;
 	text-transform: uppercase;
@@ -33,7 +34,7 @@
 	position: absolute;
 	top: -75px;
 	z-index: 1;
-	left: 19vw;
+	// left: 19vw;
 	color: #549a6f;
 	font: normal bold normal 166.5px/1.4em roboto-bold, roboto, sans-serif;
 	//font-size: 300px;
@@ -43,7 +44,7 @@
 	margin-top: 0;
 	z-index: 2;
 	margin-right: auto;
-	margin-left: 10vw;
+	margin-left: auto;
 	color: #303030;
 	font: normal bold normal 37px/1.4em roboto-bold, roboto, sans-serif;
 	text-transform: uppercase;
