--- a/src/components/scss/Footer.scss
+++ b/src/components/scss/Footer.scss
@@ -1,2 +1,37 @@
 @import "./scss-variables";
 @import "sass-rem";
+
+footer {
+	background-color: $rouge-nav;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	text-align: left;
+	padding-left: 10vw;
+	padding-top: 50px;
+	color: #fff;
+	// height: 495px;
+	padding-bottom: 20px;
+	.petit-nav-footer {
+		h3 {
+			text-transform: uppercase;
+			font-weight: 400;
+		}
+		.cont-link-footer {
+			display: flex;
+			flex-direction: column;
+			margin-top: 20px;
+			margin-bottom: 20px;
+			a {
+				text-decoration: none;
+				color: #fff;
+			}
+		}
+	}
+	.info-contact-footer {
+		margin-top: 20px;
+		h3 {
+			text-transform: uppercase;
+		}
+	}
+}
