--- a/src/components/scss/Footer.scss
+++ b/src/components/scss/Footer.scss
@@ -8,11 +8,14 @@ footer {
 	flex-direction: column;
 	align-items: flex-start;
 	text-align: left;
-	padding-left: 10vw;
+
 	padding-top: 50px;
 	color: #fff;
 	// height: 495px;
 	padding-bottom: 20px;
+	.cont-footer {
+		padding-left: 10vw;
+	}
 	.petit-nav-footer {
 		h3 {
 			text-transform: uppercase;
@@ -38,6 +41,14 @@ footer {
 		}
 		p {
 			margin: 2px 0;
+			&:nth-child(4) {
+				font-weight: bold;
+				a {
+					color: #fff;
+					text-decoration: none;
+					font-weight: normal;
+				}
+			}
 		}
 	}
 	.suivez-nous-footer {
@@ -48,20 +59,24 @@ footer {
 		p {
 			width: 70%;
 		}
-		img {
-			width: 25px;
-			height: 25px;
+		a {
+			img {
+				width: 25px;
+				height: 25px;
+			}
 		}
 	}
 	.copyright-footer {
-		text-align: center;
+		// text-align: center;
 		display: flex;
 		justify-content: center;
 		margin: 0 auto;
 		a {
 			width: 100%;
-			text-align: center;
+			// text-align: center;
 			color: #f5b8bc;
+			margin-bottom: 20px;
+			margin-top: 20px;
 			font-size: 11px/1.4em;
 		}
 	}
