--- a/src/components/scss/Hamburger.scss
+++ b/src/components/scss/Hamburger.scss
@@ -38,6 +38,9 @@
 			width: 115px;
 			height: 1px;
 			padding: 0 10px;
+			text-align: right;
+			margin-left: auto;
+			margin-right: 1vw;
 		}
 	}
 }
