--- a/src/components/scss/Expertise.scss
+++ b/src/components/scss/Expertise.scss
@@ -40,6 +40,38 @@
 	}
 }
 
+.cont-icons-d {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	.row2 {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		// flex-wrap: nowrap;
+		margin-left: auto;
+		margin-right: auto;
+		width: 90vw;
+		.item {
+			width: 50vw;
+			margin: 20px auto;
+			display: flex;
+			flex-direction: column;
+			img {
+				width: 83px;
+				margin: 0 auto;
+			}
+			p {
+				text-align: center;
+				display: inline-block;
+				width: fit-content;
+				text-transform: uppercase;
+				margin: 10px auto;
+			}
+		}
+	}
+}
+
 .title-container {
 	position: relative;
 	display: flex;
