retouche sur le demande de devis

--- a/src/components/scss/DemandeDevis.scss
+++ b/src/components/scss/DemandeDevis.scss
@@ -29,6 +29,7 @@ $rem-baseline: 10px;
 			background-color: #fff;
 			color: $rouge-nav;
 			text-transform: uppercase;
+			letter-spacing: 0.4em;
 		}
 		&:nth-child(4) {
 			width: 75%;
