--- a/src/components/scss/DemandeDevis.scss
+++ b/src/components/scss/DemandeDevis.scss
@@ -5,7 +5,7 @@
 $rem-baseline: 10px;
 
 .cont-demandeDevis-d {
-	width: 100vw;
+	width: 100%;
 	height: 495px;
 	background-image: url("https://static.wixstatic.com/media/3a257b_2d4204be49154e4da2b3f4c0b3b55161~mv2.jpg");
 	background-attachment: fixed;
@@ -70,7 +70,7 @@ $rem-baseline: 10px;
 	// background-color: #ad1019;
 }
 .cont-demandeDevis {
-	width: 100vw;
+	width: 100%;
 	height: 450px;
 	background-image: url("https://static.wixstatic.com/media/3a257b_2d4204be49154e4da2b3f4c0b3b55161~mv2.jpg");
 	// background-attachment: fixed;
