--- a/src/components/scss/Realisation.scss
+++ b/src/components/scss/Realisation.scss
@@ -13,13 +13,25 @@
 }
 .cont-realisations-d {
 	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 500px;
+	margin-left: 15%;
+	.title-container-d {
+		// margin-right: 10%;
+	}
+	.cont-res {
+		.cont-text {
+			margin-left: 50px;
+		}
+	}
 }
 .realisation-d {
 	// margin-left: auto;
 	// margin-right: auto;
 	display: flex;
 	flex-direction: column;
-	width: 50vw;
+	width: fit-content;
 	// align-items: center;
 	p:first-child {
 		margin-top: 55px;
@@ -30,8 +42,16 @@
 		margin-bottom: 10px;
 		width: 75%;
 		span {
-			font-style: italic;
-			font-weight: 400;
+			&:last-child {
+				font-style: italic;
+				font-weight: 400;
+			}
+		}
+		.green-res {
+			color: #0b7836;
+		}
+		.red-res {
+			color: $rouge-nav;
 		}
 	}
 }
