--- a/src/components/scss/Realisation.scss
+++ b/src/components/scss/Realisation.scss
@@ -97,7 +97,13 @@
 .carousel-control-next-icon {
 	background-color: rgba($color: #000000, $alpha: 0.4);
 	height: 150px;
-	width: 10rem;
+	width: 12rem;
 }
-
+@media screen and(min-width:1224px) {
+	span.carousel-control-next-icon,
+	span.carousel-control-prev-icon {
+		height: 8rem;
+		width: 8rem;
+	}
+}
 @import "../../../node_modules/bootstrap/scss/bootstrap.scss";
