realisation est prettu much fini

--- a/src/components/scss/Realisation.scss
+++ b/src/components/scss/Realisation.scss
@@ -60,6 +60,7 @@
 	// margin-right: auto;
 	display: flex;
 	flex-direction: column;
+	width: fit-content;
 	// align-items: center;
 	p:first-child {
 		margin-top: 55px;
