--- a/src/components/scss/Hamburger.scss
+++ b/src/components/scss/Hamburger.scss
@@ -25,7 +25,7 @@
 				sans-serif;
 			letter-spacing: 2px;
 			color: #fff;
-			padding: 10px 20px;
+			//padding: 10px 20px;
 			// border-bottom: 1px solid rgba($color: #fff, $alpha: 0.5);
 			a {
 				text-decoration: none;
