--- a/src/components/scss/HeroContact.scss
+++ b/src/components/scss/HeroContact.scss
@@ -9,8 +9,38 @@
 .chapeauC {
 	height: 1px;
 }
-.lilNous {
+.lilNous-d {
+	font-size: rem(16px);
+	font-family: Sen, sans-serif;
 	// margin-left: auto;
+}
+.hero-contact-d {
+	height: 100vh;
+}
+
+.bg-text-hero-contact-d {
+	height: inherit;
+	padding-top: 150px;
+	background-color: rgba(0, 0, 0, 0.37);
+
+	.title {
+		font-size: rem(80px);
+		font-family: roboto-bold, roboto, sans-serif;
+	}
+	.bigC {
+		top: -130px;
+		color: #ce1323; //$rouge-nav;
+		font-size: rem(300px);
+	}
+	.petit-para-hero-contact {
+		margin-top: 70px;
+		margin-left: 40vw;
+		margin-right: auto;
+		width: 35%;
+		text-align: left;
+		color: #fff;
+		font-family: Sen, sans-serif;
+	}
 }
 .hero-contact {
 	// background-image: url("../../images/AdobeStock_314878805.jpeg");
