--- a/src/components/scss/Footer.scss
+++ b/src/components/scss/Footer.scss
@@ -8,6 +8,15 @@ footer {
 	flex-direction: column;
 	align-items: flex-start;
 	text-align: left;
+	h3 {
+		a {
+			color: #fff;
+			text-decoration: none;
+			&:visited {
+				color: #fff;
+			}
+		}
+	}
 
 	padding-top: 50px;
 	color: #fff;
