--- a/src/components/scss/Header.scss
+++ b/src/components/scss/Header.scss
@@ -92,6 +92,7 @@ nav {
 				align-items: center;
 				text-decoration: none;
 				color: #fff;
+				cursor: pointer;
 			}
 			li {
 				margin-right: 20px;
