--- a/src/components/scss/Carousel.scss
+++ b/src/components/scss/Carousel.scss
@@ -51,7 +51,10 @@ $carousel-caption-width: 90%;
 	.img-R {
 		height: 50vh;
 	}
-	@media screen and(max-height:800px) {
+}
+@media screen and(max-height:800px) {
+	.cont-slider-d {
+		margin-top: -65px;
 		.img-R {
 			height: 60vh;
 		}
