--- a/src/components/scss/HeroContact.scss
+++ b/src/components/scss/HeroContact.scss
@@ -80,3 +80,14 @@
 		}
 	}
 }
+
+@media screen and(max-height:800px) {
+	.hero-contact-d {
+		height: 153vh;
+	}
+}
+@media screen and(max-height:900px) {
+	.hero-contact-d {
+		height: 133vh;
+	}
+}
