changement du carousel du bas vers une galerie

--- a/src/components/scss/CarouselPero.scss
+++ b/src/components/scss/CarouselPero.scss
@@ -1,3 +1,8 @@
+.contGalerie {
+	width: 80%;
+	margin-inline: auto;
+	margin-block: 50px;
+}
 .fade-carou {
 	// animation-play-state: initial;
 	animation: bande-fade 200ms backwards;
