--- a/src/components/scss/Formulaire.scss
+++ b/src/components/scss/Formulaire.scss
@@ -56,6 +56,11 @@
 					// width: 500px;
 					height: 210px;
 				}
+				textarea {
+					&::placeholder {
+						font-style: italic;
+					}
+				}
 			}
 		}
 	}
