--- a/src/components/scss/Hero.scss
+++ b/src/components/scss/Hero.scss
@@ -92,7 +92,7 @@
 	height: 50vh;
 	background-position: 50%;
 	// background-color: rgba(34, 34, 34, 0.253);
-	background-image: url("https://static.wixstatic.com/media/3a257b_bf446c64781447aa9d18bc8e8e317d6f~mv2.jpeg/v1/fill/w_640,h_700,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/3a257b_bf446c64781447aa9d18bc8e8e317d6f~mv2.jpeg");
+	background-image: url("../../images/hero-d.webp");
 	background-repeat: no-repeat;
 	background-size: cover;
 	.cont-text-hero {
